<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/search"
       android:title="@string/menu_search"
       android:icon="@drawable/ic_action_search"
       android:showAsAction="collapseActionView|ifRoom"
       android:actionViewClass="com.actionbarsherlock.widget.SearchView" />
    <item 
        android:id="@+id/menuShare" 
        android:title="@string/share_it" 
        android:icon="@drawable/ic_action_share" 
        android:showAsAction="never"/>
    <item 
        android:id="@+id/menuRate" 
        android:title="@string/rate_it" 
        android:icon="@drawable/ic_action_good" 
        android:showAsAction="never"/>
    <item 
        android:id="@+id/menuAbout" 
        android:title="@string/about" 
        android:icon="@drawable/ic_action_info" 
        android:showAsAction="never"/>
</menu>
