<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@android:color/white" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="@dimen/about_padding" >
	    <TextView 
	        android:id="@+id/txtTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/app_name"
	        android:textSize="@dimen/app_name_size"
	        android:textColor="@android:color/primary_text_light"
	        android:layout_marginBottom="@dimen/description_margin_bottom"/>
	    <TextView 
	        android:id="@+id/txtDescription"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/description"
	        android:textSize="@dimen/subtitle_size"
		    android:textColor="@android:color/secondary_text_light"
		    android:lineSpacingExtra="@dimen/line_spacing"
	        android:layout_marginBottom="@dimen/description_margin_bottom"/>
	    <TextView 
	        android:id="@+id/txtCopyright"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/copyright"
	        android:textSize="@dimen/subtitle_size"
	        android:autoLink="web"
	        android:lineSpacingExtra="@dimen/line_spacing"
		    android:textColor="@android:color/secondary_text_light"/>
	</LinearLayout>
</ScrollView>
