<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	android:background="@android:color/white">
    <TextView
	    android:id="@+id/txtAlert"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/detail"
	    android:textColor="@android:color/secondary_text_light"
	    android:textSize="@dimen/subtitle_size"
	    android:layout_centerInParent="true" />
    <ScrollView 
	    android:id="@+id/sclDetail"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:fadeScrollbars="true"
	    android:scrollbarThumbVertical="@drawable/fastscroll_thumb_holo"
	    android:visibility="gone"
	    android:paddingBottom="@dimen/detail_bottom_padding"
	    android:fadingEdge="none">
	    
	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">    
		    <ImageView 
		    	android:id="@+id/imgPreview"
				android:layout_width="match_parent"
				android:layout_height="@dimen/image_detail_height"
			    android:scaleType="centerCrop"
			    android:layout_alignParentTop="true"/>
		    <LinearLayout 
		        android:id="@+id/lytTitle"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="@dimen/title_padding"
		        android:orientation="vertical"
		        android:layout_below="@+id/imgPreview">
		        <TextView 
		        	android:id="@+id/txtRecipeName"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/title_size"
		            android:textStyle="bold"
		            android:textColor="@android:color/primary_text_light"
		            android:layout_marginBottom="@dimen/title_margin_bottom"/>
		        <TextView 
		        	android:id="@+id/txtTime"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/subtitle_size"
		            android:textColor="@android:color/secondary_text_light"
		            android:layout_marginBottom="@dimen/title_margin_bottom"/>
		    </LinearLayout>
	    
	    	<ImageView 
				android:id="@+id/imgDivider"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@android:color/darker_gray"
				android:layout_marginLeft="@dimen/divider_margin_left"
				android:layout_marginRight="@dimen/divider_margin_right"
				android:layout_below="@+id/lytTitle"/>
	    
	        <LinearLayout 
			    android:id="@+id/lytDetail"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:padding="@dimen/detail_padding"
			    android:layout_below="@+id/imgDivider">
		    	
			    <TextView 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/summary"
			        android:textSize="@dimen/title_size"
			        android:textStyle="bold"
			        android:textColor="@android:color/primary_text_light"
			        android:layout_marginBottom="1dp"/>
			     <TextView 
			        android:id="@+id/txtSummary"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/subtitle_size"
			        android:textColor="@android:color/primary_text_light"
			        android:lineSpacingExtra="@dimen/line_spacing"
			        android:layout_marginBottom="@dimen/description_margin_bottom"/>
			     <TextView 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/ingredients"
			        android:textSize="@dimen/title_size"
			        android:textStyle="bold"
			        android:textColor="@android:color/primary_text_light"
			        android:layout_marginBottom="1dp"/>
			     <TextView 
			        android:id="@+id/txtIngredients"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/subtitle_size"
			        android:lineSpacingExtra="@dimen/line_spacing"
			        android:textColor="@android:color/primary_text_light"
			        android:layout_marginBottom="@dimen/description_margin_bottom"/>
			     <TextView 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/directions"
			        android:textSize="@dimen/title_size"
			        android:textStyle="bold"
			        android:textColor="@android:color/primary_text_light"
			        android:layout_marginBottom="1dp"/>
			     <TextView 
			        android:id="@+id/txtDirections"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/subtitle_size"
			        android:lineSpacingExtra="@dimen/line_spacing"
			        android:textColor="@android:color/primary_text_light"
			        android:layout_marginBottom="@dimen/description_margin_bottom"/>
			</LinearLayout>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>


